--- a/package.json
+++ b/package.json
@@ -8,9 +8,10 @@
     "watch:sass": "node-sass sass/main.scss css/style.css -w",
     "start": "npm-run-all --parallel devserver watch:sass",
     "compile:sass": "node-sass sass/main.scss css/style.comp.css",
+    "concat:css": "concat -o css/style.concat.css css/style.comp.css",
     "prefix:css": "autoprefixer-cli -o css/style.prefix.css css/style.concat.css",
     "compress:css": "node-sass css/style.prefix.css css/style.css --output-style compressed",
-    "build:css": "npm-run-all compile:sass  prefix:css compress:css"
+    "build:css": "npm-run-all compile:sass concat:css prefix:css compress:css"
   },
   "author": "Marta-Luba",
   "license": "ISC",
@@ -20,5 +21,9 @@
     "node-sass": "^4.14.1",
     "npm-run-all": "^4.1.5",
     "nu-html-checker": "^0.1.0"
+  },
+  "dependencies": {
+    "browser-sync": "^2.27.10",
+    "concat": "^1.0.3"
   }
 }
